--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/kien_mall
-spring.datasource.username=root
-spring.datasource.password=admin@123456
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
-server.context_parameters.primefaces.FONT_AWESOME=true
+server.port=8082
+spring.datasource.url= jdbc:mysql://localhost:3306/kien_mall?useSSL=false
+spring.datasource.username= root
+spring.datasource.password= admin@123456
+
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto= update
+
+# App Properties
+bezkoder.app.jwtSecret= bezKoderSecretKey
+bezkoder.app.jwtExpirationMs= 86400000
